tests/vrs/flags/flags_03_global_body_expected.txt
error: expected `}`, found `bar`
     --> tests/vrs/flags/flags_03_global_body.vrs:1:14
      |
    1 |  flags { foo  bar }
      |               ^^^ help: add `}` here.
